Refactoring zero function and layout

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
             <button>1</button>
             <button>2</button>
             <button>3</button>
+            <button>0</button>
         </div>
-        <button id="zero">0</button>
         <div class="operator">
             <button>÷</button>
             <button>x</button>
